<?xml version="1.0"?>
<package>
  <name>eigen_utils</name>
  <version>1.0.1</version>
  <description>Useful math functions using Eigen</description>

  <maintainer email="mprats@willowgarage.com">Mario Prats</maintainer>

  <license>GPLv2</license>

  <url>http://ros.org/wiki/eigen_utils</url>
  
  <author>Mario Prats</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>eigen</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>roscpp</run_depend>
</package>
